samples/_failures_safe/1761503177_25b9c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8a23022.c: In function ‘main’:
./samples/SAFE/__tmp_f8a23022.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
